fix: fix site map and spacing bottom layout

--- a/src/app/[locale]/layout.module.css
+++ b/src/app/[locale]/layout.module.css
@@ -8,6 +8,7 @@
 
 .childWrapper {
   padding: var(--mantine-spacing-md);
+  margin-bottom: 200px;
 }
 
 .mainShell {
